rust/src/nasl/syntax/tokenizer/snapshots/scannerlib__nasl__syntax__tokenizer__tests__unclosed_string.snap
---
source: src/nasl/syntax/tokenizer/tests.rs
expression: "tokenize_err(stringify! (unclosed_string), \"\\\"hello I am a unclosed string\\\\\")"
snapshot_kind: text
---
error: Unclosed string literal.
  ┌─ unclosed_string:1:1
  │
1 │ "hello I am a unclosed string\
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Unclosed string literal.
